feat: 更新品牌颜色主题
- 主色调改为翠绿色 #068D7B
- 辅助色改为亮黄 #FFE501
- 强调色更新为粉红、淡蓝、橙黄
- 更新导航栏、按钮等UI组件颜色
- 保持整体视觉风格一致性

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#1a365d",
+    "navigationBarBackgroundColor": "#068D7B",
     "navigationBarTitleText": "社区小事",
     "navigationBarTextStyle": "white",
     "backgroundColor": "#f8fafc",
