fix: 修复util.js兼容性问题
- 简化工具函数，避免ES6语法导致的兼容性问题
- 移除URL、Set等小程序不支持的API
- 使用传统语法确保在所有小程序版本中正常工作
- 保留核心功能：日期格式化、相对时间、手机号验证

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -15,5 +15,30 @@
     "enablePullDownRefresh": true,
     "onReachBottomDistance": 50
   },
+  "tabBar": {
+    "color": "#64748b",
+    "selectedColor": "#068D7B",
+    "backgroundColor": "#ffffff",
+    "borderStyle": "black",
+    "position": "bottom",
+    "list": [
+      {
+        "pagePath": "pages/home/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/activists/index",
+        "text": "活动家"
+      },
+      {
+        "pagePath": "pages/leaders/index",
+        "text": "带领人"
+      },
+      {
+        "pagePath": "pages/join/index",
+        "text": "加入我们"
+      }
+    ]
+  },
   "lazyCodeLoading": "requiredComponents"
 }
