feat: 重构底部tabBar为三个核心功能
- 新增小事生成器页面：让用户根据类别生成社区小事想法
- 新增小事行动吧页面：展示和参与社区活动
- 更新tabBar配置：首页🏠、小事生成器💡、小事行动吧🧩
- 移除旧的活动家/带领人/加入我们标签
- 需要添加对应的tabBar图标文件

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
     "pages/home/index",
+    "pages/generator/index",
+    "pages/action/index",
     "pages/activists/index",
     "pages/leaders/index",
     "pages/join/index",
@@ -24,19 +26,21 @@
     "list": [
       {
         "pagePath": "pages/home/index",
-        "text": "首页"
+        "text": "首页",
+        "iconPath": "images/tabbar/home.png",
+        "selectedIconPath": "images/tabbar/home-active.png"
       },
       {
-        "pagePath": "pages/activists/index",
-        "text": "活动家"
+        "pagePath": "pages/generator/index",
+        "text": "小事生成器",
+        "iconPath": "images/tabbar/generator.png",
+        "selectedIconPath": "images/tabbar/generator-active.png"
       },
       {
-        "pagePath": "pages/leaders/index",
-        "text": "带领人"
-      },
-      {
-        "pagePath": "pages/join/index",
-        "text": "加入我们"
+        "pagePath": "pages/action/index",
+        "text": "小事行动吧",
+        "iconPath": "images/tabbar/action.png",
+        "selectedIconPath": "images/tabbar/action-active.png"
       }
     ]
   },
