feat: 优化UI样式系统, 重构'小事行动吧'枢纽页, 并完成云开发数据对齐

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/activists/index",
     "pages/leaders/index",
     "pages/join/index",
-    "pages/learning/index"
+    "pages/learning/index",
+    "pages/action/intro/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
